# openalk

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  REFERENCES.md  Test.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run.sh  setup.cfg
.github/workflows/: main.yml  pr_checks.yml
docs/: INSTALL.md  REFERENCES.md
install/: openalk.desktop  ta.desktop
lib/: RSQ.py  __init__.py  app_test.py  auto_titration.py  borateALK.py  classTitration.py  gui.py  initial_titration.py  ph_interface.py  ph_modules.py  pinSetup.py  pump_interface.py  pump_module.py  pump_modules.py  pump_rpi.py  pump_testing.py  readpH.py  test1.py
lib/config/: borate_alk.py
lib/config/tests/: rsq_test.py
lib/services/ph/: orion_star.py  ph_interface.py  ph_modules.py
lib/services/ph/tests/: ph_interface_test.py  ph_modules_test.py
lib/services/pump/: norgren.py  norgren_pump.py  pump_interface.py  pump_rpi.py  pump_testing.py
lib/services/pump/tests/: norgren_pump_test.py  pump_interface_test.py  pump_modules_test.py
lib/services/titration/: gran.py  gran_new.py  titration_class.py
lib/services/titration/tests/: testdata.csv  titration_class_test.py  titration_modules_test.py  titration_test.py
lib/utils/: borate_alk.py  regression.py  rpi_pin_setup.py  rsq.py
lib/utils/tests/: borate_alk_test.py  regression_test.py
lib/view/: gui.py  gui_new.py
lib/view/tests/: gui_test.py
