[metadata]
name = ta_autotitrator
version = 0.1
author = Dave Peacock
author_email = dave.peacock@ebbcarbon.com
description = Total Alkalinity Autotitrator
long_description = file: README.md
keywords = alkalinity, oceanography
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7

[options.package_data]
* = *.txt, *.md

[options.packages.find]
exclude =
    examples*
    tools*
    docs*