[metadata]
name = openalk
version = 0.1
author = Dave Peacock, Anthony Canalungo, Ryan Bloom
author_email = dave.peacock@ebbcarbon.com
description = Open source instrumentation for measurement of seawater total alkalinity
long_description = file: README.md
keywords = alkalinity, oceanography
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7

[options.package_data]
* = *.txt, *.md

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
